remove unnecessary class

--- a/limit-animation/index.html
+++ b/limit-animation/index.html
@@ -29,7 +29,7 @@
               />
             </svg>
           </button>
-          <button id="animate" class="paused" title="Play">
+          <button id="animate" title="Play">
             <svg
               id="play-button"
               width="30px"
